# CrabbyLB

./: .gitignore  CMakeLists.txt  README.md  run_crabbyLB.sh
include/core/: load_balancer.h  request.h  response.h  server.h  thread_pool.h  utils.h
scripts/: start_backends.py  stop_backends.py
src/: main.cpp
src/core/: load_balancer.cpp  request.cpp  response.cpp  server.cpp  thread_pool.cpp  utils.cpp
